# musicshowwins

./: .env.sample  .gitignore  README.md  docker-compose.yml  docker-compose.yml.sample  tailwind.config.js
musicshowwins/: Dockerfile  manage.py  pyproject.toml
musicshowwins/main/: admin.py  models.py  urls.py  utils.py  views.py
musicshowwins/main/migrations/: 0001_initial.py  0002_artistfix_songfix.py  0003_alter_artist_name_alter_musicshow_name.py  0004_remoteaddr_requestmethod_requestpath_access.py  0005_urlapprovalstatus_delete_access_delete_remoteaddr_and_more.py
musicshowwins/main/static/css/: input.css  style.css
musicshowwins/main/static/js/: script.js
musicshowwins/main/templates/main/: _index.html  about.html  artists_page.html  base.html  details.html  index.html  simpledisplay.html
musicshowwins/main/templates/main/partials/: artist_details.html  search_results.html  song_image.html  (+2 more)
musicshowwins/musicshowwins/: asgi.py  settings.py  urls.py  wsgi.py
musicshowwins/restapi/: serializers.py  urls.py  views.py
musicshowwins/scripts/: perftest.py  remove_entries.py  scraper.py  update_db.py  wikiscraper.py
musicshowwins/scripts/data/: 2013_inkigayo.csv  2013_show_champion.csv  2016_music_core.csv  2016_music_core_no_dates.csv
musicshowwins/scripts/oneoffs/: manual_data_entry.py
musicshowwins/scripts/tests/: test_inkigayo.py  test_mcountdown.py  test_music_bank.py  test_music_core.py  test_show_champion.py  test_the_show.py
musicshowwins/scripts/wikiscraper/: __init__.py  consts.py  wikiparser.py  wikirequests.py  wikiscraper.py
(+3 files in other folders)
