[tool.poetry]
name = "musicshowwins"
version = "0.1.0"
description = ""
authors = ["badmagick"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.3"
beautifulsoup4 = "^4.12.2"
pandas = "^2.0.3"
requests = "^2.31.0"
praw = "^7.7.1"
lxml = "^4.9.3"
python-dotenv = "^1.0.0"
psycopg2-binary = "^2.9.6"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-django = "^4.5.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "-rP"
