[tool.poetry]
name = "musicshowwins"
version = "0.1.0"
description = ""
authors = ["badmagick"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.3"
beautifulsoup4 = "^4.12.2"
pandas = "^2.0.3"
requests = "^2.31.0"
praw = "^7.7.1"
lxml = "^4.9.3"
python-dotenv = "^1.0.0"
psycopg2-binary = "^2.9.6"
matplotlib = "^3.7.2"
gunicorn = "^21.2.0"
djangorestframework = "^3.14.0"
djangorestframework-types = "^0.8.0"
markdown = "^3.5.1"
drf-yasg = "^1.21.7"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-django = "^4.5.2"
django-types = "^0.19.1"
django-stubs = "^4.2.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "-rP"
